# kemomctr

./: README.md  glossary_example.csv  pyproject.toml
kemomctr/: cli.py  pack_maker.py  recursive_translator.py  single_translator.py
